<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">مرسى الفندق</string>
    <string name="action_login">تسجيل الدخول</string>
    <string name="label_username">اسم المستخدم</string>
    <string name="label_password">كلمة المرور</string>
    <string name="label_failed_attempts">محاولات الدخول الفاشلة</string>
    <string name="label_remember_me">تذكرني</string>
    <string name="label_dashboard">لوحة التحكم</string>
    <string name="label_bookings">الحجوزات</string>
    <string name="label_rooms">الغرف</string>
    <string name="label_payments">المدفوعات</string>
    <string name="label_cash_register">الصندوق النقدي</string>
    <string name="label_expenses">المصروفات</string>
    <string name="label_employees">الموظفون</string>
    <string name="label_reports">التقارير</string>
    <string name="label_settings">الإعدادات</string>
    <string name="label_invoices">الفواتير</string>
    <string name="label_activity_log">سجل النشاط</string>
    <string name="label_filters">التصفيات</string>
    <string name="label_search">بحث</string>
    <string name="label_status">الحالة</string>
    <string name="label_guest_info">بيانات النزيل</string>
    <string name="label_booking_info">بيانات الحجز</string>
    <string name="label_notes">ملاحظات</string>
    <string name="label_add_note">إضافة ملاحظة</string>
    <string name="label_edit_booking">تعديل الحجز</string>
    <string name="label_add_booking">إضافة حجز</string>
    <string name="label_save">حفظ</string>
    <string name="label_cancel">إلغاء</string>
    <string name="label_total">الإجمالي</string>
    <string name="label_paid">المدفوع</string>
    <string name="label_remaining">المتبقي</string>
    <string name="label_amount">المبلغ</string>
    <string name="label_nights">عدد الليالي</string>
    <string name="label_method">طريقة الدفع</string>
    <string name="label_revenue_type">نوع الإيراد</string>
    <string name="label_revenue_restaurant">مطعم</string>
    <string name="label_revenue_services">خدمات</string>
    <string name="label_other">أخرى</string>
    <string name="label_payment_cash">نقدي</string>
    <string name="label_payment_card">بطاقة</string>
    <string name="label_payment_transfer">تحويل</string>
    <string name="label_date">التاريخ</string>
    <string name="label_supplier">المورد</string>
    <string name="label_add_supplier">إضافة مورد</string>
    <string name="label_description">الوصف</string>
    <string name="label_category">التصنيف</string>
    <string name="label_status_available">متاح</string>
    <string name="label_status_occupied">مشغول</string>
    <string name="label_status_maintenance">صيانة</string>
    <string name="label_current_guests">النزلاء الحاليون</string>
    <string name="label_daily_revenue">إيراد اليوم</string>
    <string name="label_status_upcoming">قادمة</string>
    <string name="label_status_completed">مكتملة</string>
    <string name="label_status_cancelled">ملغاة</string>
    <string name="label_loading">جاري التحميل…</string>
    <string name="label_empty_state">لا توجد بيانات حالياً</string>
    <string name="label_retry">إعادة المحاولة</string>
    <string name="label_logout">تسجيل الخروج</string>
    <string name="label_change_password">تغيير كلمة المرور</string>
    <string name="label_permissions">الصلاحيات</string>
    <string name="label_sync_settings">إعدادات المزامنة</string>
    <string name="label_hotel_info">بيانات الفندق</string>
    <string name="label_user_info">المستخدم</string>
    <string name="label_users">المستخدمون</string>
    <string name="label_open_register">فتح صندوق جديد</string>
    <string name="label_close_register">إغلاق الصندوق</string>
    <string name="label_add_transaction">إضافة حركة</string>
    <string name="label_add_payment">إضافة مدفوع</string>
    <string name="label_add_expense">إضافة مصروف</string>
    <string name="label_new_invoice">إنشاء فاتورة</string>
    <string name="label_export_pdf">تصدير PDF</string>
    <string name="label_export_excel">تصدير Excel</string>
    <string name="label_from">من</string>
    <string name="label_to">إلى</string>
    <string name="label_select_room">اختر الغرفة</string>
    <string name="label_select_booking">اختر الحجز</string>
    <string name="label_contact">التواصل</string>
    <string name="label_role">الدور الوظيفي</string>
    <string name="label_salary">الراتب الأساسي</string>
    <string name="label_withdrawals">السحوبات</string>
    <string name="label_add_withdrawal">إضافة سحب</string>
    <string name="label_priority_high">أولوية عالية</string>
    <string name="label_priority_medium">أولوية متوسطة</string>
    <string name="label_priority_low">أولوية منخفضة</string>
</resources>
